[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnr"
version = "0.1.0"
description = "Lightning Network Research Gossip Processing Pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "aio-pika>=9.3.0",
    "aiosqlite>=0.19.0",
    "faststream[rabbit]>=0.5.0",
    "rich>=13.6.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "google-cloud-storage>=3.4.1",
]

[project.scripts]
lnr = "lnr.cli:cli"
lnr-web = "lnr.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "B", "C", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "python-kacl>=0.6.7",
]
